# SIL

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MANIFESTO.en.md  MANIFESTO.md  Makefile  README.md  docker-compose.yml  宣言.md
benches/: Cargo.toml
benches/benches/: bytesil_bench.rs  jsil_bench.rs  layer_bench.rs  orchestrator_bench.rs  processor_bench.rs  semantics_bench.rs  simd_bench.rs  state_bench.rs  transform_bench.rs  vsp_bench.rs
benches/src/: lib.rs
lis-api/: Cargo.toml
lis-api/src/: handlers.rs  main.rs  middleware.rs  models.rs  openapi.rs  routes.rs
lis-cli/: Cargo.toml
lis-cli/src/: lsp.rs  main.rs
lis-core/: Cargo.toml  README.md  STATUS.md  STDLIB_INTEGRATION.md  TUTORIAL.md  package.json  pyproject.toml
lis-core/docs/: type-system.md
lis-core/src/: compiler.rs  error.rs  lexer.rs  lib.rs  manifest.rs  parser.rs  python_bindings.rs  resolver.rs  wasm.rs
lis-core/src/ast/: mod.rs
lis-core/src/llvm/: codegen.rs  intrinsics.rs  jit.rs  mod.rs  types.rs
lis-core/src/python/: mod.rs
lis-core/src/stdlib/: bytesil.rs  console.rs  debug.rs  http.rs  io.rs  layers.rs  math.rs  mod.rs  state.rs  string.rs  transforms.rs
lis-core/src/stdlib/ml/: activations.rs  conv.rs  (+25 more)
lis-core/src/types/: checker.rs  inference.rs  intrinsics.rs  mod.rs
lis-core/tests/: jsil_integration.rs  type_checker.rs
lis-format/: Cargo.toml  FORMATTER_IMPLEMENTATION.md  README.md
lis-format/src/: config.rs  formatter.rs  lib.rs  main.rs  printer.rs
lis-format/tests/: integration_tests.rs
lis-runtime/: Cargo.toml
lis-runtime/src/: error.rs  executor.rs  lib.rs  loader.rs  runtime.rs
sil-acoustic/: Cargo.toml
sil-acoustic/src/: error.rs  lib.rs  microphone.rs  tests.rs  types.rs
sil-actuator/: Cargo.toml
sil-actuator/src/: error.rs  lib.rs  motor.rs  servo.rs  tests.rs  types.rs
sil-core/: Cargo.toml  README.md  build.rs  package.json  pyproject.toml
sil-core/data/: AOT_IMPLEMENTATION_SUMMARY.md  ASYNC_GPU_IMPLEMENTATION.md  BENCHMARK_REPORT.md  DYNASM_EXTENDED_OPCODES.md  DYNASM_IMPLEMENTATION.md  DYNASM_OPCODES.md  GPU_BATCHING.md  JIT_ALTERNATIVES.md  JIT_IMPLEMENTATION_STATUS.md  JSIL.md  JSIL_PIPELINE.md  MULTI_ARCH_STATUS.md  PERFORMANCE_COMPLETED.md  PERFORMANCE_INDEX.md  PERFORMANCE_INVESTIGATION.md  PERFORMANCE_README.md  PERFORMANCE_REGRESSION_TESTING.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_VALIDATION.md  QUICKSTART_PERFORMANCE.md  README.md  RISCV_JIT_STRATEGY.md  SHADER_PRECOMPILATION.md  SIMD_LAYERS.md  VSP_AOT_COMPILER.md  VSP_JIT_COMPLETE.md  VSP_JIT_PROPOSAL.md  VSP_JIT_QUICKREF.md  VSP_JIT_STATUS.md  VSP_JIT_TECHNICAL.md  VSP_PERFORMANCE.md
sil-core/shaders/: gradient.wgsl  hadamard.wgsl  interpolate.wgsl  quantum_gates.wgsl
sil-core/src/: lib.rs  prelude.rs  semantics.rs  traits.rs
sil-core/src/cycle/: mod.rs  sil_loop.rs
sil-core/src/io/: jsil.rs  jsonl.rs  mod.rs  pipeline.rs  reader.rs  streaming.rs  transforms.rs  writer.rs
sil-core/src/patterns/: emergent.rs  mediator.rs  mod.rs  observer.rs  strategy.rs
sil-core/src/processors/: auto.rs  mod.rs  performance_fixes.rs  quantum_bridge.rs  traits.rs  unified_batch.rs
sil-core/src/python/: mod.rs
sil-core/src/state/: bit.rs  byte_sil.rs  mod.rs  sil_state.rs  simd.rs
sil-core/src/transforms/: emergence.rs  interaction.rs  meta.rs  mod.rs  perception.rs  processing.rs
sil-core/src/vsp/: aot.rs  assembler.rs  backend.rs  bytecode.rs  codegen.rs  config.rs  debugger.rs  dynasm.rs  entanglement.rs  error.rs  instruction.rs  interpreter.rs  jit.rs  memory.rs  mod.rs  opcode.rs  repl.rs  state.rs
sil-core/src/wasm/: mod.rs
sil-cosmopolitan/: Cargo.toml
sil-cosmopolitan/src/: circles.rs  ethics.rs  hospitality.rs  lib.rs  rights.rs  species.rs  state.rs
sil-ecosystem/: Cargo.toml  README.md
sil-ecosystem/src/: lib.rs
sil-energy/: Cargo.toml
sil-energy/benches/: energy_bench.rs
sil-energy/src/: error.rs  lib.rs  meter.rs  model.rs  optimizer.rs  sampler.rs  snapshot.rs
sil-environment/: Cargo.toml
sil-environment/src/: climate.rs  error.rs  fusion.rs  lib.rs  tests.rs  types.rs
sil-governance/: Cargo.toml
sil-governance/src/: governance_mode.rs  lib.rs  proposal.rs  territory.rs  voting.rs  westphalian.rs
sil-ml/: Cargo.toml  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PYTHON_INTEGRATION.md  QUICK_REFERENCE.md
sil-ml/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
sil-ml/catboost_info/learn/: events.out.tfevents
sil-ml/examples/: AUDIT_FINAL.txt  advanced_poc.rs  benchmark.py  benchmark_sil.rs  enhanced_bytesilmapper.py  federated_training.rs  sil_ml_features.rs  sil_ml_python.py
sil-ml/examples/catboost_info/: catboost_training.json  time_left.tsv
sil-ml/src/: error.rs  lib.rs
sil-ml/src/arch/: attention.rs  kan.rs  lnn.rs  mod.rs  recurrent.rs  snn.rs  ssm.rs  transformer.rs
sil-ml/src/core/: activations.rs  encoder.rs  linalg.rs  loss.rs  mod.rs  optim.rs  pipeline.rs  semantic_layers.rs  stats.rs  tensor.rs  transforms.rs
sil-ml/src/distributed/: byzantine.rs  checkpoint.rs  cluster.rs  compression.rs  federated.rs  mesh.rs  mod.rs  privacy.rs
sil-ml/src/edge/: mod.rs
sil-ml/src/emergence/: mod.rs
sil-ml/src/inference/: mod.rs
sil-ml/src/layers/: mod.rs
sil-network/: Cargo.toml
sil-network/src/: control_mode.rs  cybernetic.rs  lib.rs  mesh.rs  message.rs  node.rs  peer.rs  pid.rs  transport.rs
sil-olfactory/: Cargo.toml
sil-olfactory/src/: error.rs  gas_sensor.rs  lib.rs  tests.rs  types.rs
sil-orchestration/: Cargo.toml  README.md
sil-orchestration/src/: distributed.rs  error.rs  events.rs  lib.rs  lockfree.rs  orchestrator.rs  pipeline.rs  registry.rs  scheduler.rs
sil-orchestration/tests/: integration.rs
sil-photonic/: Cargo.toml
sil-photonic/src/: camera.rs  error.rs  lib.rs  light.rs  tests.rs  types.rs
sil-quantum/: Cargo.toml
sil-quantum/src/: error.rs  gates.rs  gpu_gates.rs  lib.rs  processor.rs  simd.rs  state.rs  tests.rs
sil-swarm/: Cargo.toml
sil-swarm/src/: behavior.rs  emergence.rs  error.rs  lib.rs  node.rs  spatial.rs  tests.rs
(+278 files in other folders)
