[package]
name = "sil-benches"
version = "2026.1.17"
edition = "2024"
publish = false

[dependencies]
sil-core = { path = "../sil-core" }
sil-orchestration = { path = "../sil-orchestration" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bytesil_bench"
harness = false

[[bench]]
name = "state_bench"
harness = false

[[bench]]
name = "transform_bench"
harness = false

[[bench]]
name = "orchestrator_bench"
harness = false

[[bench]]
name = "layer_bench"
harness = false

[[bench]]
name = "vsp_bench"
harness = false

[[bench]]
name = "jsil_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "processor_bench"
harness = false

[[bench]]
name = "semantics_bench"
harness = false
