[package]
name = "lis-api"
version = "2026.1.16"
edition = "2024"
authors = ["SIL Contributors"]
license = "AGPL-3.0"
description = "REST API server for LIS (Language for Intelligent Systems)"
repository = "https://github.com/silvanoneto/SIL"
keywords = ["api", "rest", "compiler", "language-server"]
categories = ["development-tools", "web-programming"]

[package.metadata.deb]
maintainer = "SIL Contributors <dev@silvanoneto.com>"
section = "devel"
priority = "optional"
assets = []
extended-description = "REST API server for LIS providing compilation and tooling endpoints (binary 'lis-api')."

[[bin]]
name = "lis-api"
path = "src/main.rs"

[dependencies]
lis-core = { path = "../lis-core" }
lis-format = { path = "../lis-format" }
sil-core = { path = "../sil-core" }

# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
clap = { version = "4.5", features = ["derive", "env"] }

# Rate limiting
governor = "0.8"

# OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
criterion = "0.5"
