[package]
name = "lis-cli"
version = "2026.1.16"
edition = "2024"
authors = ["Silvano Neto <dev@silvanoneto.com>"]
license = "AGPL-3.0"
description = "Command-line interface for the LIS language compiler"

[package.metadata.deb]
maintainer = "Silvano Neto <dev@silvanoneto.com>"
section = "devel"
priority = "optional"
assets = []
extended-description = "Command-line tools for the LIS compiler, including 'lis' and 'lis-lsp'."

[[bin]]
name = "lis"
path = "src/main.rs"

[[bin]]
name = "lis-lsp"
path = "src/lsp.rs"

[dependencies]
lis-core = { path = "../lis-core" }
sil-core = { path = "../sil-core" }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
serde_json = "1.0"

[features]
default = []
http = ["lis-core/http"]

[dev-dependencies]
criterion = "0.5"
