[package]
name = "lis-runtime"
version = "2026.1.16"
edition = "2024"
authors = ["Silvano Neto <dev@silvanoneto.com>"]
license = "AGPL-3.0"
description = "Runtime for executing LIS programs compiled to VSP bytecode"

[package.metadata.deb]
maintainer = "Silvano Neto <dev@silvanoneto.com>"
section = "devel"
priority = "optional"
assets = []
extended-description = "Runtime tools for executing LIS compiled programs (provides 'lis-run')."

[dependencies]
lis-core = { path = "../lis-core" }
sil-core = { path = "../sil-core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "lis-run"
path = "src/bin/lis-run.rs"

[dev-dependencies]
criterion = "0.5"
