[package]
name = "sil-acoustic"
version = "2026.1.16"
edition = "2024"
authors = ["Silvano Neto <dev@silvanoneto.com>"]
description = "L1 Acústico — Microfones, ultrassom, processamento de áudio"
license = "AGPL-3.0"
keywords = ["sil", "acoustic", "audio", "microphone", "l1"]
categories = ["embedded", "multimedia"]
rust-version = "1.92"

[dependencies]
sil-core = { path = "../sil-core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
