[package]
name = "sil-core"
version = "2026.1.16"
edition = "2024"
authors = ["Silvano Neto <dev@silvanoneto.com>"]
description = "SIL-Core — Symbolic Integration Layer runtime and VSP bytecode interpreter with 16-layer quantum-inspired state model"
license = "AGPL-3.0"
repository = "https://github.com/silvanoneto/SIL"
homepage = "https://github.com/silvanoneto/SIL"
documentation = "https://docs.rs/sil-core"
readme = "README.md"
keywords = ["sil", "edge-computing", "topology", "complex-numbers", "16-layers", "pot-phi-c"]
categories = ["science", "mathematics", "algorithms", "simulation"]
rust-version = "1.92"

[features]
default = []
gpu = ["wgpu", "bytemuck", "pollster", "tokio"]
npu = ["dep:objc2", "dep:objc2-foundation", "dep:block2"]
fpga = []
fpga-xilinx = ["fpga"]
fpga-intel = ["fpga"]
fpga-lattice = ["fpga"]
fpga-sim = ["fpga"]
simd = []
python = ["dep:pyo3", "dep:numpy"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:serde-wasm-bindgen", "dep:js-sys", "dep:web-sys", "dep:console_error_panic_hook"]
jit = ["dep:cranelift", "dep:cranelift-jit", "dep:cranelift-module", "dep:cranelift-native", "dep:cranelift-object", "dep:cranelift-codegen", "dep:target-lexicon", "dep:dirs"]
dynasm = ["dep:dynasmrt"]

[package.metadata.docs.rs]
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sil_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vsp"
path = "src/bin/vsp.rs"

[[bin]]
name = "silasm"
path = "src/bin/silasm.rs"

[[bin]]
name = "sil-lsp"
path = "src/bin/sil-lsp.rs"

[[bin]]
name = "vsp-aot"
path = "src/bin/vsp-aot.rs"
required-features = ["jit"]

[dependencies]
# Números complexos
num-complex = "0.4"
num-traits = "0.2"

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Codificação para JSONL/JSIL
hex = "0.4"
base64 = "0.22"

# Zero-copy I/O
bytes = "1.9"
memmap2 = "0.9"

# Errors
thiserror = "2.0"

# Energy measurement
sil-energy = { path = "../sil-energy" }

# Lazy statics
once_cell = "1.19"

# GPU (opcional)
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
tokio = { version = "1.0", features = ["sync", "time", "rt", "rt-multi-thread"], optional = true }

# NPU / Quantização (half sempre disponível para Quantizable trait)
half = "2.4"

# CoreML bindings (macOS/iOS NPU)
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["std", "NSArray", "NSData", "NSString", "NSDictionary", "NSError", "NSValue", "NSURL"] }
block2 = { version = "0.6", optional = true }
# JIT/AOT Compilation (opcional)
cranelift = { version = "0.113", optional = true }
cranelift-jit = { version = "0.113", optional = true }
cranelift-module = { version = "0.113", optional = true }
cranelift-native = { version = "0.113", optional = true }
cranelift-object = { version = "0.113", optional = true }
cranelift-codegen = { version = "0.113", optional = true }
target-lexicon = { version = "0.12", optional = true }
dirs = { version = "5.0", optional = true }

# DynASM JIT (ARM64 runtime assembly)
dynasmrt = { version = "2.0", optional = true }

# WASM FFI
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
# Testes
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]
optional = true

[dependencies.numpy]
version = "0.22"
optional = true
