[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sil-core"
version = "2026.1.16"
description = "SIL-Core — Python bindings for Symbolic Integration Layer runtime and VSP"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.9"
authors = [
    {name = "Silvano Neto", email = "dev@silvanoneto.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["sil", "edge-computing", "complex-numbers", "bytecode", "virtual-machine", "vsp"]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/silvanoneto/SIL"
Documentation = "https://github.com/silvanoneto/SIL/docs"
Repository = "https://github.com/silvanoneto/SIL"
Issues = "https://github.com/silvanoneto/SIL/issues"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "sil_core._sil_core"
