[package]
name = "sil-network"
version = "2026.1.16"
edition = "2024"
authors = ["Silvano Neto <dev@silvanoneto.com>"]
description = "L8 Cibernético — P2P mesh, discovery, transporte signed"
license = "AGPL-3.0"
keywords = ["sil", "network", "p2p", "mesh", "l8"]
categories = ["network-programming"]
rust-version = "1.92"

[dependencies]
sil-core = { path = "../sil-core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
socket2 = "0.5"

[dev-dependencies]
criterion = "0.5"
