[package]
name = "sil-olfactory"
version = "2026.1.16"
edition = "2024"
authors = ["Silvano Neto <dev@silvanoneto.com>"]
description = "L2 Olfativo — Sensores de gás, detecção química, reconhecimento de odores"
license = "AGPL-3.0"
keywords = ["sil", "olfactory", "gas", "sensor", "l2"]
categories = ["embedded", "hardware-support"]
rust-version = "1.92"

[dependencies]
sil-core = { path = "../sil-core" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
